@@ -183,6 +183,11 @@ class ParseException
 	// needless to say, we could flesh this class out a bit
 };
 
+class Exception
+{
+	// needless to say, we could flesh this class out a bit
+};
+
 class UnsupportedEncryptionException
 {
 	// needless to say, we could flesh this class out a bit
