@@ -33,6 +33,8 @@ Lachance)
 - MSVC compiler switch (Fridrich Strba)
 - Some more refactoring, sharing more code between parsers (Marc Maurer)
 - Windows versioning: add a BUILDNUMBER (Fridrich Strba)
+- Be more carefull to open plain text files (Marc Maurer)
+- Improved error reporting when a document can not be opened (Marc Maurer)
 
 0.7.0 -> 0.7.1
 - Fixes to the multinational character map (Fridrich Strba)
